# soroban-amm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Taskfile.yaml  readme.md  rewards_reliability_report.md  rust-toolchain.toml
access_control/: Cargo.toml
access_control/src/: access.rs  constants.rs  emergency.rs  errors.rs  events.rs  interface.rs  lib.rs  management.rs  role.rs  storage.rs  transfer.rs  utils.rs
batcher/: Cargo.toml  Taskfile.yaml
config_storage/: Cargo.toml  Taskfile.yaml
config_storage/src/: contract.rs  lib.rs  test_permissions.rs  testutils.rs
contracts/: soroban_batcher.wasm  soroban_config_storage_contract.wasm  soroban_fees_collector_contract.wasm  soroban_guard.wasm  soroban_liquidity_pool_concentrated_contract.wasm  soroban_liquidity_pool_contract.wasm  soroban_liquidity_pool_liquidity_calculator_contract.wasm  soroban_liquidity_pool_plane_contract.wasm  soroban_liquidity_pool_provider_swap_fee_contract.wasm  soroban_liquidity_pool_provider_swap_fee_factory_contract.wasm  soroban_liquidity_pool_router_contract.wasm  soroban_liquidity_pool_stableswap_contract.wasm  soroban_locker_feed_contract.wasm  soroban_rewards_gauge_contract.wasm  soroban_token_contract.wasm
contracts_v170/: dummy_contract.wasm  soroban_config_storage_contract.wasm  soroban_fees_collector_contract.wasm  soroban_liquidity_pool_contract.wasm  soroban_liquidity_pool_liquidity_calculator_contract.wasm  soroban_liquidity_pool_plane_contract.wasm  soroban_liquidity_pool_provider_swap_fee_contract.wasm  soroban_liquidity_pool_provider_swap_fee_factory_contract.wasm  soroban_liquidity_pool_router_contract.wasm  soroban_liquidity_pool_stableswap_contract.wasm  soroban_locker_feed_contract.wasm  soroban_rewards_gauge_contract.wasm  soroban_token.wasm  (+1 more)
guard/: Cargo.toml  (+1 more)
integration_tests/: Cargo.toml  Taskfile.yaml
integration_tests/src/: bench_chained_swap.rs  contracts.rs  lib.rs  tests.rs  testutils.rs
liquidity_pool/: Cargo.toml  Taskfile.yaml
liquidity_pool/src/: admin.rs  assertions.rs  constants.rs  contract.rs  errors.rs  lib.rs  liquidity.rs  plane.rs  plane_interface.rs  pool.rs  pool_interface.rs  rewards.rs  storage.rs  storage_types.rs  test.rs  test_permissions.rs  testutils.rs  token.rs
liquidity_pool/src/rewards/: constants.rs  manager.rs  mod.rs  storage.rs
liquidity_pool_concentrated/: Cargo.toml  Taskfile.yaml
liquidity_pool_concentrated/src/: bitmap.rs  constants.rs  contract.rs  errors.rs  events.rs  lib.rs  math.rs  plane.rs  plane_interface.rs  plane_tests.rs  pool_interface.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs  types.rs  u512.rs
liquidity_pool_concentrated/src/contract/: admin.rs  extensions.rs  internal.rs  liquidity_pool_interface.rs  managed.rs  mod.rs  plane.rs  rewards_gauge_impl.rs  rewards_impl.rs  transferable.rs  upgradeable.rs
liquidity_pool_config_storage/: Cargo.toml
liquidity_pool_config_storage/src/: interface.rs  lib.rs  operations.rs  storage.rs  storage_keys.rs  test.rs  testutils.rs
liquidity_pool_events/: Cargo.toml
liquidity_pool_events/src/: lib.rs
liquidity_pool_liquidity_calculator/: Cargo.toml  Taskfile.yaml
liquidity_pool_liquidity_calculator/src/: calculator.rs  concentrated_pool.rs  constants.rs  contract.rs  errors.rs  interface.rs  lib.rs  plane.rs  stableswap_pool.rs  stableswap_pool_u128.rs  stableswap_pool_u256.rs  standard_pool.rs  standard_pool_u128.rs  standard_pool_u256.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs  u256.rs  utils.rs
liquidity_pool_plane/: Cargo.toml  Taskfile.yaml
liquidity_pool_plane/src/: contract.rs  interface.rs  lib.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs
liquidity_pool_provider_swap_fee/: Cargo.toml  Taskfile.yaml
liquidity_pool_provider_swap_fee/src/: constants.rs  contract.rs  errors.rs  events.rs  interface.rs  lib.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs
liquidity_pool_provider_swap_fee_factory/: Cargo.toml  Taskfile.yaml
liquidity_pool_provider_swap_fee_factory/src/: contract.rs  events.rs  lib.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs
liquidity_pool_router/: Cargo.toml  Makefile  Taskfile.yaml
liquidity_pool_router/src/: access_utils.rs  admin.rs  constants.rs  contract.rs  errors.rs  events.rs  lib.rs  liquidity_calculator.rs  pool_contract.rs  pool_interface.rs  pool_utils.rs  rewards.rs  rewards_gauge.rs  router_interface.rs  storage.rs  storage_types.rs  swap_router.rs  test.rs  test_permissions.rs  testutils.rs  token.rs  utils.rs
liquidity_pool_stableswap/: Cargo.toml  Taskfile.yaml
liquidity_pool_stableswap/src/: admin.rs  assertions.rs  constants.rs  contract.rs  errors.rs  events.rs  lib.rs  liquidity.rs  normalize.rs  plane.rs  plane_interface.rs  pool_2_constants.rs  pool_3_constants.rs  pool_4_constants.rs  pool_constants.rs  pool_interface.rs  rewards.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs  token.rs
liquidity_pool_stableswap/src/rewards/: manager.rs  mod.rs  storage.rs
liquidity_pool_swap_router/: Cargo.toml  Taskfile.yaml
liquidity_pool_swap_router/src/: constants.rs  contract.rs  interface.rs  lib.rs  plane.rs  stableswap_pool.rs  standard_pool.rs  storage.rs  test.rs
locker_feed/: Cargo.toml  Taskfile.yaml
locker_feed/src/: contract.rs  errors.rs  interface.rs  lib.rs  test_permissions.rs  testutils.rs
rewards/: Cargo.toml
rewards/src/: boost_feed.rs  concentrated_weight.rs  constants.rs  errors.rs  events.rs  lib.rs  locker_feed.rs  manager.rs  storage.rs
rewards/src/locked_boost/: manager.rs  mod.rs
rewards/src/opt_out/: manager.rs
rewards_gauge/: Cargo.toml  Taskfile.yaml
rewards_gauge/src/: constants.rs  contract.rs  errors.rs  gauge.rs  lib.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs  token_share.rs
token/: Cargo.toml  Taskfile.yaml
token/src/: allowance.rs  balance.rs  contract.rs  errors.rs  interface.rs  lib.rs  metadata.rs  pool.rs  storage_types.rs  test.rs  test_permissions.rs  testutils.rs
token_share/: Cargo.toml
token_share/src/: lib.rs
(+46 files in other folders)
