[workspace]
resolver = "2"

members = [
    "utils",
    "access_control",
    "token_share",
    "token",
    "rewards",
    "liquidity_pool",
    "liquidity_pool_stableswap",
    "liquidity_pool_router",
    "liquidity_pool_swap_router",
    "liquidity_pool_plane",
    "liquidity_pool_validation_errors",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = { version = "20.5.0" }
soroban-token-sdk = { version = "20.5.0" }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }
paste = { version = "1.0.14" }
cast = { version = "0.3.0" }
utils = { path = "utils" }
access_control = { path = "access_control" }
token_share = { path = "token_share" }
rewards = { path = "rewards" }
liquidity-pool-validation-errors = { path = "liquidity_pool_validation_errors" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
