[workspace]
resolver = "2"

members = [
    "utils",
    "access_control",
    "token_share",
    "token",
    "rewards",
    "liquidity_pool",
    "liquidity_pool_stableswap",
    "liquidity_pool_router",
    "liquidity_pool_liquidity_calculator",
    "liquidity_pool_plane",
    "liquidity_pool_validation_errors",
    "liquidity_pool_events",
    "fees_collector",
    "upgrade",
    "locker_feed",
    "liquidity_pool_provider_swap_fee_factory",
    "liquidity_pool_provider_swap_fee",
    "integration_tests",
]

[workspace.package]
version = "1.5.0"
rust-version = "1.84"

[workspace.dependencies]
soroban-sdk = { version = "22.0.6" }
soroban-token-sdk = { version = "22.0.6" }
soroban-fixed-point-math = { version = "1.3.0"}
paste = { version = "1.0.15" }
utils = { path = "utils" }
access_control = { path = "access_control" }
token_share = { path = "token_share" }
rewards = { path = "rewards" }
upgrade = { path = "upgrade"}
liquidity-pool-validation-errors = { path = "liquidity_pool_validation_errors" }
liquidity-pool-events = { path = "liquidity_pool_events" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
