[package]
name = "access_control"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
liquidity-pool-validation-errors = { workspace = true }

[dev-dependencies]
utils = { workspace = true, features = ["testutils"] }