[package]
name = "soroban-liquidity-pool-contract"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
rewards = { workspace = true }
token_share = { workspace = true }
access_control = { workspace = true }
utils = { workspace = true }
liquidity-pool-validation-errors = { workspace = true }
liquidity-pool-events = { workspace = true }
soroban-fixed-point-math = { workspace = true }
paste = { workspace = true }
upgrade = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }

[features]
default = []
slow_tests = []
