[package]
name = "liquidity-pool-config-storage"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["rlib"]
doctest = false

[features]
default = []
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
paste = { workspace = true}

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
