[package]
name = "liquidity-pool-events"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true


[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
