[package]
name = "soroban-liquidity-pool-router-contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
num-integer = { workspace = true }
paste = { workspace = true }
access_control = { workspace = true }
utils = { workspace = true }
rewards = { workspace = true }
token_share = { workspace = true }
liquidity-pool-validation-errors = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
