[package]
name = "soroban-liquidity-pool-stableswap-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.0.3" }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }
cast = { version = "0.3.0" }
access_control = { path = "../access_control" }
rewards = { path = "../rewards" }
token_share = { path = "../token_share" }
utils = { path = "../utils" }

[dev_dependencies]
soroban-sdk = { version = "20.0.3", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[features]
default = []
tokens_2 = []
tokens_3 = []
tokens_4 = []
