[package]
name = "soroban-liquidity-pool-stableswap-contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
cast = { workspace = true }
access_control = { workspace = true }
rewards = { workspace = true }
token_share = { workspace = true }
utils = { workspace = true }
liquidity_pool_plane_interface = {workspace = true}

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = ["tokens_2"]
tokens_2 = []
tokens_3 = []
tokens_4 = []
