[package]
name = "soroban-liquidity-pool-stableswap-contract"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
access_control = { workspace = true }
rewards = { workspace = true }
token_share = { workspace = true }
utils = { workspace = true }
paste = { workspace = true }
liquidity-pool-validation-errors = { workspace = true }
liquidity-pool-events = { workspace = true }
soroban-fixed-point-math = { workspace = true }
upgrade = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
