[package]
name = "soroban-liquidity-pool-swap-router-contract"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
access_control = { workspace = true }
soroban-sdk = { workspace = true }
utils = { workspace = true }
liquidity-pool-validation-errors = { workspace = true }
soroban-fixed-point-math = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
