[package]
name = "rewards"
version.workspace = true
edition = "2021"
publish = false


[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
cast = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
