[package]
name = "token_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk = { version = "20.0.3" }
utils = { path = "../utils" }

[dev_dependencies]
soroban-sdk = { version = "20.0.3", features = ["testutils"] }
